@@ -58,8 +58,8 @@ import javax.sql.DataSource;
                         .requestMatchers(HttpMethod.POST, "/register", "/login").permitAll()
                         .requestMatchers(HttpMethod.GET, "/reservation", "/user/allReservation", "/user/*/updateReservation", "/userProfile").authenticated()
                         .requestMatchers(HttpMethod.POST, "/reservation", "/user/*/delete", "/user/*/updateReservation").authenticated()
-                        .requestMatchers(HttpMethod.GET, "/admin/allReservation", "/admin/allUsers").hasAnyAuthority(ADMIN_ROLE)
-                        .requestMatchers(HttpMethod.POST).hasAnyAuthority(ADMIN_ROLE)
+                        .requestMatchers(HttpMethod.GET, "/admin/allReservation", "/admin/allUsers", "/admin/AllUsers/*/reservationUser").hasAnyAuthority(ADMIN_ROLE)
+                        .requestMatchers(HttpMethod.POST, "/admin/allUsers/{userId}/delete", "/admin/AllUsers/*/reservationUser/*/delete").hasAnyAuthority(ADMIN_ROLE)
                         // tutti gli utenti autenticati possono accedere alle pagine rimanenti 
                         .anyRequest().authenticated()).formLogin(login -> login
                         .loginPage("/login")
