@@ -1,11 +1,9 @@
 package it.uniroma3.siw.my_restaurant.model;
 
-import jakarta.persistence.CascadeType;
 import jakarta.persistence.Entity;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
-import jakarta.persistence.OneToOne;
 import jakarta.validation.constraints.NotBlank;
 
 @Entity
@@ -20,9 +18,6 @@ public class Menu {
 	
 	@NotBlank
 	private String description;
-	
-	@OneToOne(cascade = CascadeType.ALL)
-	private Table table;
 
 	public Long getId() {
 		return this.id;
@@ -43,13 +38,6 @@ public class Menu {
 	}
 	public void setDescription(String description) {
 		this.description = description;
-	}
-
-	public Table getTable() {
-		return this.table;
-	}
-	public void setTable(Table table) {
-		this.table = table;
 	}
 
 }
