@@ -66,7 +66,7 @@
 						<label class="label">Password</label>
 						<div class="control has-icons-left has-icons-right">
 							<input th:field="${credentials.password}" class="input" type="password"
-								placeholder="Password">
+								placeholder="Password" autocomplete="off">
 							<span class="icon is-small is-left">
 								<i class="fas fa-lock"></i>
 							</span>
